# gNMIBuddy

./: .gitignore  CAPABILITY_VERIFICATION_REFACTORING_PLAN.md  DISPLAY_DUCK_TYPING_SUMMARY.md  ERROR_HANDLER_REFACTOR_SUMMARY.md  EXAMPLES_REFACTOR_SUMMARY.md  MIGRATION_COMPLETE_SUMMARY.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_5_IMPLEMENTATION_SUMMARY.md  PHASE_6_CLEANUP_SUMMARY.md  PHASE_6_IMPLEMENTATION_REPORT.md  README.md  REFACTORING_PLAN.md  agent_prompts.md  agent_prompts_dotenv_implementation.md  agent_prompts_issue19.md  ao_sandbox.json  api.py  cli_app.py  cli_basic_output.txt  cli_test_output.txt  gbuddy.py  gnmibuddy.py  gnmictl  gnmictl.py  llm_agent_prompts.md  mcp_server.py  prompts-used.md  prompts.md  pyproject.toml  test_custom.env  test_malformed.env  test_migration_helpers_quick.py  test_migration_logic.py  test_phase1.py  test_phase1_final.py  test_phase1_integration.py  test_phase1_simple.py  test_results.txt  test_schema_compliance.py  (+3 more)
ansible-helper/: hosts  xrd_apply_config.yaml
completions/: gnmibuddy-completion.bash  gnmibuddy-completion.zsh
docs/: TOPOLOGY_ADJACENCY.md
docs/agent-prompts/: issue-14-implementation-prompts.md
examples/mcp/: README.md  claude-desktop-dev.json  claude-desktop-uvx.json  cursor-dev.json  cursor-uvx.json  mcp-standard-dev.json  vscode-dev.json  vscode-uvx.json
src/: __init__.py
src/cli/: __init__.py  commands.py  display.py  parser.py
src/cmd/: README.md  __init__.py  base.py  batch.py  cli_utils.py  commands.py  context.py  display.py  error_handler.py  error_providers.py  formatters.py  groups.py  module_log_help.py  parser.py  version.py
src/collectors/: __init__.py  capabilities.py  interfaces.py  logs.py  mpls.py  profile.py  routing.py  system.py  topology.py  vpn.py
src/config/: README.md  __init__.py  environment.py
src/decorators/: __init__.py  capability_verification.py  smart_capability_verification.py
src/gnmi/: CAPABILITY_VERIFICATION_GUIDE.md  IMPLEMENTATION_PLAN.md  capabilities.py  client.py  error_handlers.py  parameters.py  preflight.py  response_parser.py  responses.py  retry_handler.py
src/inventory/: __init__.py  file_handler.py  manager.py  models.py  sanitizer.py  validator.py
src/logging/: IMPLEMENTATION.md  MCP_ENVIRONMENT_VARIABLES.md  README.md  __init__.py  config.py  demo.py  external_suppression.py  mcp_config.py  usage_examples.py
src/network_tools/: __init__.py  deviceprofile.py  interfaces_info.py  logging.py  mpls_info.py  responses.py  routing_info.py  system_info.py  topology.py  vpn_info.py
src/parsers/: README.md  base.py  deviceprofile_parser.py  system_info_parser.py
src/processors/: README.md  base.py  deviceprofile_processor.py  system_info_processor.py  topology_processor.py
src/schemas/: __init__.py  capabilities.py  metadata.py  models.py  openconfig_models.py  responses.py  verification_results.py
src/services/: __init__.py  capability_verification.py  commands.py
src/utils/: __init__.py  capability_cache.py  logging_config.py  migration_helpers.py  parallel_execution.py  path_analyzer.py  serialization.py  thread_safety.py  version_utils.py  vrf_utils.py
tests/: conftest.py  test_api_mcp_integration.py  test_regression.py
tests/certificates/: device.key  device.pem
tests/cmd/: conftest.py  test_advanced_features.py  test_batch_validation.py  test_cli_best_practices.py  test_migration.py  (+18 more)
(+254 files in other folders)
